# remotea

./: README.md
Q-POP-Modules-main/: CMakeLists.txt  README.md
Q-POP-Modules-main/docs/: Makefile  conf.py  examples.md  index.md  prepare.md  python.md  run.md  visualization.md
Q-POP-Modules-main/docs/_static/: custom.css
Q-POP-Modules-main/imt/: README.md  customSolver.py  input.xml  qpop-imt.py
Q-POP-Modules-main/stash/: CMakeLists.txt
Q-POP-Modules-main/stash/imt-cpp/: CMakeLists.txt  README.md  imt.cpp  imt.h  imt.ufl  input.h  main.cpp
Q-POP-Modules-main/stash/py/: README.md  VO2_GSBlockAPT_adap2.py  VO2_GSBlockATP.py  ac.test.py  ac_2.test.py  ac_ener.py  boundaryUtilities.py  ch.test.py  elast.test.py  heat.test.py  lp.test.py  meshUtilities.py  nlp.test.py  solvers.py  tensorUtilities.py  terminalPrinting.py
